#
# Makefile.am: This file is part of the cuda version of PoCC project
# Author: Naiqing Guan <guannq@pku.edu.cn>

#############################################################################
SUBDIRS 		=


#############################################################################

MAINTAINERCLEANFILES	= Makefile.in

#############################################################################
